# lidertex_test_work

./: .gitignore  pyproject.toml
test_lidertex/: abc_graph.py  app.py  graphs.py  headers.py  models.py  parser.py
test_lidertex/local_data/: local_data.json
