[tool.poetry]
name = "test-lidertex"
version = "0.1.0"
description = ""
authors = ["Alex Gorbunov <alextk37@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.44.0"
requests = "^2.32.3"
pandas = "^2.2.3"
plotly = "^6.0.1"
pydantic = "^2.10.6"
matplotlib = "^3.10.1"
streamlit-aggrid = "^1.1.2"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
